# origin

./: AboutOrigin.md  CMakeLists.txt  GettingStarted.md  GoogleSummerOfCode.md  History.md  Ideas.md  Ideas_Blas.md  Ideas_Fixed.md  Ideas_Integer.md  Ideas_Lsi.md  Ideas_MatrixDecomposition.md  Ideas_PrefixTree.md  Ideas_Reactor.md  Ideas_Real.md  Ideas_SuffixTree.md  ProjectHome.md
branches/backwards/insertion_sort/: insertion_map.hpp  insertion_set.hpp  insertion_vector.hpp  linear_search.hpp
branches/experimental/: CMakeLists.txt  README.txt
branches/experimental/cmake/: Origin.cmake
branches/experimental/core/tests/: CMakeLists.txt
branches/experimental/graph/tests/: CMakeLists.txt
branches/experimental/origin/type/: CMakeLists.txt
branches/experimental/tools/: plot-comp-ratio.py
branches/old-trunk/graph/: CMakeLists.txt
branches/old-trunk/graph/tests/: dijkstra_shortest_path.cpp
core/include/origin/: type.hpp  utility.hpp
core/include/origin/algorithm/: core.hpp  find.hpp
core/include/origin/container/: vector_base.hpp
core/include/origin/iterator/: move.hpp  stride.hpp
core/include/origin/testing/: relations.hpp
core/include/origin/type/: traits.hpp  typestr.hpp
core/tests/: tuple.cpp
core/tests/container/: CMakeLists.txt
core/tests/iterator/: transform.cpp
core/tests/type/: all.cpp  common.cpp  convertible.cpp  derived.cpp  identity.cpp  relational.cpp  same.cpp
data/include/origin/: stack.hpp
data/tests/: CMakeLists.txt
data/tests/dynarray/: dynarray.cpp
graph/include/origin/graph/: label.hpp
math/tests/: CMakeLists.txt
math/tests/blas/: matrix_impl_base_test.cpp
math/tests/matrix/: CMakeLists.txt  matrix1.cpp  matrix2.cpp
origin/math/matrix/: CMakeLists.txt
origin/type/: traits.hpp  type.hpp
origin/type/concepts.impl/: deduction.hpp  traits.hpp
origin/type/traits.impl/: meta.hpp
sandbox/adjacency_matrix/adjacency_matrix_r01/: directed.hpp
sandbox/adjacency_vector/: CMakeLists.txt  impl.hpp  undirected.hpp
sandbox/adjacency_vector/include/origin/: CMakeLists.txt
sandbox/eco/: CMakeLists.txt  README.txt
sandbox/eco/apps/sampler/: MainWindow.cpp  MainWindow.hpp  MainWindow.ui  geometry.hpp  math.hpp  random.hpp  sampler.icns  sampler.pro  statistics.hpp  util.hpp
sandbox/eco/include/origin/: geometry.hpp  math.hpp  matrix.hpp  random.hpp  statistics.hpp
sandbox/eco/scripts/: run.sh
sandbox/eco/tests/: CMakeLists.txt  centroid.cpp  nearest.cpp  sample.cpp
sandbox/heaps/: CMakeLists.txt
sandbox/heaps/include/origin/heaps/: binary_heap.hpp  binomial_heap.hpp  binomial_tree.hpp  fibonacci_heap.hpp  flat_binomial_heap.hpp  index.hpp  pairing_heap.hpp
sandbox/heaps/tests/: CMakeLists.txt  binary_heap.cpp  binomial_heap.cpp  check_heap.hpp  compile.cpp  fibonacci_heap.cpp  heap_sort.hpp  pairing_heap.cpp
sandbox/iterator/: CMakeLists.txt  README.txt
sandbox/iterator/include/origin/iterator/: algorithm.hpp  concepts.hpp  iterator.hpp  pointer.hpp
sandbox/iterator/tests/: CMakeLists.txt  algo.cpp  common.cpp  model.cpp
sandbox/lang/lambda/: CMakeLists.txt  context.cpp  context.hpp  evaluation.cpp  evaluation.hpp  identifier_table.hpp  lexer.cpp  lexer.hpp  location.hpp  main.cpp  parser.cpp  parser.hpp  sexpr.cpp  sexpr.hpp  symbol.cpp  symbol.hpp  symbol_table.cpp  symbol_table.hpp  syntax.cpp  syntax.hpp  token.hpp  untyped.cpp
sandbox/lang/lambda/test/: bool.lambda  combin.lambda  id.l  id.lambda  lex.l  number.lambda  reduce.lambda
sandbox/origin/: CMakeLists.txt  type.hpp
sandbox/origin/cmake/: Origin.cmake  OriginModule.cmake  OriginTest.cmake
sandbox/origin/data/optional/: optional.hpp
sandbox/origin/iterator/: CMakeLists.txt  concepts.cpp  concepts.hpp  testing.hpp
sandbox/origin/iterator/concepts.test/: iterators.cpp  ranges.cpp  rw.cpp  traits.cpp
sandbox/origin/math/: matrix.hpp
sandbox/origin/math/matrix/: CMakeLists.txt  (+4 more)
sandbox/origin/origin/: CMakeLists.txt
sandbox/origin/range/: CMakeLists.txt  concepts.cpp  concepts.hpp
sandbox/origin/sequence/: CMakeLists.txt  algorithm.hpp  concepts.hpp  range.hpp  testing.cpp  testing.hpp
sandbox/origin/type/: CMakeLists.txt  concepts.hpp  testing.cpp  testing.hpp  traits.hpp  typestr.hpp
sandbox/perf/: CMakeLists.txt  README.txt
sandbox/perf/tests/: CMakeLists.txt  compile.cpp
sandbox/sciencefair/: CMakeLists.txt  README.txt
sandbox/sciencefair/apps/: CMakeLists.txt
sandbox/sciencefair/apps/import/: CMakeLists.txt  import.cpp
sandbox/sciencefair/include/origin/: algorithm.hpp  csv.hpp  random.hpp  statistics.hpp
sandbox/sciencefair/include/scifair/data/: csv.hpp
sandbox/sciencefair/tests/: csv.cpp  nearest.cpp  uniform.cpp
sandbox/scientific-03/: CMakeLists.txt
sandbox/scientific-03/include/origin/: geometry.hpp
sandbox/scientific-03/tests/: CMakeLists.txt  util.hpp
sandbox/std/src/: memory.cpp
sandbox/std/tests/: CMakeLists.txt  allocator.cpp  build.cpp  dynarray.cpp  perf_vector.cpp  pointer.cpp  vector.cpp
sandbox/std/tests/perf/: CMakeLists.txt  perf.hpp
sandbox/std/tests/perf/vector/: CMakeLists.txt
sandbox/std/tests/perf/vector/fill_init/: CMakeLists.txt  origin.cpp  std.cpp  test.hpp
sandbox/std/tests/perf/vector/push_back/: CMakeLists.txt  origin.cpp  std.cpp  test.hpp
sandbox/std/tests/perf/vector_base/: CMakeLists.txt  README.txt  origin.cpp  std.cpp  test.hpp
sandbox/stream/: CMakeLists.txt  stream.cpp  stream.hpp
sandbox/stream/stream.test/: stream.cpp
sandbox/template/: CMakeLists.txt
trunk/data/: CMakeLists.txt
trunk/data/tests/: ordinal_map.cpp
trunk/graph/tests/: CMakeLists.txt  dijkstra_shortest_path.cpp  mst.cpp
wiki/: AboutOrigin.wiki  GettingStarted.wiki  GoogleSummerOfCode.wiki  History.wiki  Ideas.wiki  Ideas_Blas.wiki  Ideas_Fixed.wiki  Ideas_Integer.wiki  Ideas_Lsi.wiki  Ideas_MatrixDecomposition.wiki  Ideas_PrefixTree.wiki  Ideas_Reactor.wiki  Ideas_Real.wiki
wiki/Ideas/: EventLibrary.wiki  SuffixTree.wiki
(+120 files in other folders)
